--- a/css/mirador.css
+++ b/css/mirador.css
@@ -233,7 +233,7 @@ a {
   background-color: #fff;
   box-shadow: 0 0 6px #333;
 }
-#bookmark-panel {
+#bookmark-panel, #workspace-upload-panel {
   position: absolute;
   height: 20%;
   width: 30%;
@@ -245,15 +245,15 @@ a {
   top: 0;
   padding: 10px;
 }
-#bookmark-panel span {
+#bookmark-panel span, #workspace-upload-panel span  {
   width: 100%;
   padding-left: 2%;
 }
-#bookmark-panel input {
+#bookmark-panel input, #workspace-upload-panel input  {
   width: 80%;
   margin-right: 3px;
 }
-#bookmark-panel h3 {
+#bookmark-panel h3, #workspace-upload-panel h3  {
   text-align: center;
 }
 .container {
