--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1757,7 +1757,7 @@ a.mirador-icon-empty-slot [class^="icon-"] {
   padding-bottom:30px;
 }
 
-.mirador-viewer a.mirador-icon-window-menu, .mirador-viewer a.mirador-icon-toc, .mirador-viewer a.mirador-close-window  {
+.mirador-viewer a.mirador-icon-window-menu, .mirador-viewer a.mirador-icon-toc, .mirador-viewer a.mirador-close-window, .mirador-viewer a.mirador-icon-ruler {
   float:left;
   background: none;
   color: rgb( 146, 145, 145 );
@@ -1775,13 +1775,15 @@ a.mirador-icon-window-menu, a.mirador-icon-view-type {
 .mirador-viewer a.mirador-icon-empty-slot:hover, 
 .mirador-viewer a.mirador-icon-window-menu:hover, 
 .mirador-viewer a.mirador-icon-toc:hover,
-.mirador-viewer a.mirador-osd-fullscreen:hover {
+.mirador-viewer a.mirador-osd-fullscreen:hover,
+.mirador-viewer a.mirador-icon-ruler:hover {
   color: black;
 }
 
 .mirador-viewer a.mirador-icon-view-type.selected,
 .mirador-viewer a.mirador-icon-toc.selected,
-.mirador-viewer a.mirador-icon-metadata-view.selected {
+.mirador-viewer a.mirador-icon-metadata-view.selected,
+.mirador-viewer a.mirador-icon-ruler.selected {
   color: black;
 }
 
