--- a/css/mirador.css
+++ b/css/mirador.css
@@ -225,7 +225,7 @@ a {
   background-color: rgba(255,255,255,0.94);
   display: none;
   overflow: hidden;
-  z-index: 5;
+  z-index: 1048576;
 }
 #manifest-select-menu {
   position: absolute;
@@ -237,7 +237,7 @@ a {
   top: 0;
   display: none;
   overflow: hidden;
-  z-index: 101;
+  z-index: 2097152;
   background-color: #fff;
   box-shadow: 0 0 6px #333;
 }
@@ -248,7 +248,7 @@ a {
   background-color: rgba(255,255,255,0.94);
   display: none;
   overflow: hidden;
-  z-index: 5;
+  z-index: 1048576;
   right: 0;
   top: 0;
   padding: 10px;
@@ -260,7 +260,7 @@ a {
   background-color: rgba(255,255,255,0.94);
   display: none;
   overflow: hidden;
-  z-index: 5;
+  z-index: 1048576;
   right: 0;
   top: 0;
   padding: 10px;
