--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1118,180 +1118,48 @@ li.highlight {
 }
 .mirador-pan-zoom-controls {
   position: absolute;
-  width: auto; /* revert to 100px */
+  width: 100px; /* re-revert to auto */
   height: 65px;
   bottom:0;
   right:0;
   margin:1%;
 }
-.mirador-osd-positive-rotate {
-  font-size:130%;
-  position:absolute;
-  right:0px;
-  top:5px;
-}
-.mirador-osd-negative-rotate {
-  font-size:130%;
-  position:absolute;
-  right:0px;
-  top:30px;
-}
-
-/* Additions to support image manipulation. */
-.mirador-osd-contrast {
-  font-size: 103%;
-  color: #FFF;
-  width: 175px;
-  display: block;
-  position: relative;
-  margin: 15px 0px;
-}
-.mirador-osd-brightness {
-  font-size:103%;
-  position: relative;
-  color:white;
-  width: 175px;
-  display: block;
-}
-.brightnessSlider {
-  display: inline-block;
-  margin-top:8px;
-  height: 0.4em !important;
-  width: 135px;
-  /*height:200px;*/
-}
-.contrastSlider {
-  display: inline-block;
-  margin-top:8px;
-  height: 0.4em !important;
-  width: 135px;
-  /*height:200px;*/
-}
-.brightnessSlider .ui-slider-handle {
-  width: .4em !important;
-  top: -0.4em !important;
-}
-.contrastSlider .ui-slider-handle {
-  width: .4em !important;
-  top: -0.4em !important;
-}
-.invertEffect {
-  -webkit-filter: invert(100%);
-  -moz-filter: invert(100%);
-  filter: invert(100%);
-}
-.grayscaleEffect {
-  -webkit-filter: grayscale(100%);
-  -moz-filter: grayscale(100%);
-  filter: grayscale(100%);
-}
-.invertEffect.grayscaleEffect {
-  -webkit-filter: invert(100%) grayscale(100%);
-  -moz-filter: invert(100%) grayscale(100%);
-  filter: invert(100%) grayscale(100%);
-}
-.mirador-osd-toggle-grayscale {
-  font-size:100%;
-  position:relative;
-  /*right:170px;
-  top:104px;*/
-  cursor: pointer;
-  text-align: left;
-  display: block;
-  margin: 10px 0px;
-}
-.mirador-osd-toggle-invert {
-  font-size:100%;
-  position:relative;
-  /*right:170px;
-  top:135px;*/
-  display:block;
-  cursor: pointer;
-  text-align: left;
-  margin-bottom: 10px;
-}
-.mirador-osd-filters-off {
-  font-size: 100%;
-  position: absolute;
-  display: block;
-  right: 25px;
-  cursor: pointer;
-}
-.mirador-osd-filters-off span {
-  border: 1px solid white;
-  padding: 3px ;
-}
-.mirador-pan-zoom-toggle {
-    width: 60px;
-    height: 70px;
-    position: absolute;
-    bottom: 70px;
-    right: 0px;
-    color: #008000;
-    opacity: 1;
-    padding: 25px 0px;
-}
-.viewImgManip {
-  height: 70px;
-  width: 60px;
-}
-.imgManipIcon {
-  display: inline-block;
-  position: relative;
-  height: 30px;
-  width: 30px;
-  margin-left: 10px;
-  top: 8px;
-}
-.mirador-img-manipulation {
-  right:-350px;
-  height: 289px;
-  width: auto;
-  position: absolute;
-  background-color: black;
-  padding: 16px;
-  opacity:1 !important;
-  text-align: left;
-  bottom: 0px;
-  font-size: 88%;
-}
-/* end of Additions to support image manipulation. */
 
 .mirador-osd-up {
   position:absolute;
-  right:51px;
+  right:20px;
   top:0px;
 }
 .mirador-osd-right {
   position:absolute;
-  right:31px;
+  right:0px;
   top:20px;
 }
 .mirador-osd-down {
   position:absolute;
-  right:51px;
+  right:20px;
   top:40px;
 }
 .mirador-osd-left {
   position:absolute;
-  right:71px;
+  right:40px;
   top:20px;
 }
 .mirador-osd-zoom-in {
   font-size:130%;
   position:absolute;
-  right:100px;
+  right:70px;
   top:5px;
 }
 .mirador-osd-zoom-out {
   font-size:130%;
   position:absolute;
-  right:100px;
+  right:70px;
   top:30px;
 }
 .mirador-osd-go-home {
   position: absolute;
-  right:51px;
+  right:30px;
   top:20px;
 }
 .mirador-osd-context-controls {
