--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1812,7 +1812,7 @@ a.mirador-icon-annotations [class^="icon-"] {
 
 .mirador-viewer ul.dropdown {
   display: none;
-  width: 160px;
+  width: auto;
   z-index: 3;
   opacity: 0.98;
   background-color: #efefef;
@@ -1842,7 +1842,8 @@ a.mirador-icon-annotations [class^="icon-"] {
   font-weight: bold;
 }
 
-.mirador-viewer .dropdown.lock-options-list li.current-lg {
+.mirador-viewer .dropdown.lock-options-list li.current-lg,
+.mirador-viewer .dropdown.multi-image-list li.current-choice-img  {
   background-color: deepskyblue;
 }
 
@@ -1872,7 +1873,7 @@ a.mirador-icon-empty-slot [class^="icon-"] {
   padding-bottom:30px;
 }
 
-.mirador-viewer a.mirador-icon-window-menu, .mirador-viewer a.mirador-icon-toc, .mirador-viewer a.mirador-close-window, .mirador-viewer a.mirador-icon-ruler, .mirador-viewer a.mirador-icon-lock-window {
+.mirador-viewer a.mirador-icon-window-menu, .mirador-viewer a.mirador-icon-toc, .mirador-viewer a.mirador-close-window, .mirador-viewer a.mirador-icon-ruler, .mirador-viewer a.mirador-icon-lock-window, .mirador-viewer a.mirador-icon-multi-image {
   float:left;
   background: none;
   color: rgb( 146, 145, 145 );
@@ -1892,6 +1893,7 @@ a.mirador-icon-window-menu, a.mirador-icon-view-type {
 .mirador-viewer a.mirador-icon-toc:hover,
 .mirador-viewer a.mirador-osd-fullscreen:hover,
 .mirador-viewer a.mirador-icon-lock-window:hover,
+.mirador-viewer a.mirador-icon-multi-image:hover,
 .mirador-viewer a.mirador-icon-ruler:hover {
   color: black;
 }
@@ -1900,6 +1902,7 @@ a.mirador-icon-window-menu, a.mirador-icon-view-type {
 .mirador-viewer a.mirador-icon-toc.selected,
 .mirador-viewer a.mirador-icon-metadata-view.selected,
 .mirador-viewer a.mirador-icon-lock-window.selected,
+.mirador-viewer a.mirador-icon-multi-image.selected,
 .mirador-viewer a.mirador-icon-ruler.selected {
   color: black;
 }
