--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1851,6 +1851,11 @@ a.mirador-icon-annotations [class^="icon-"] {
   background-color: deepskyblue;
 }
 
+.mirador-viewer .dropdown.multi-image-list li img.choice-img-thumbnail  {
+  width: 50px;
+  height: 50px;
+}
+
 .image-list {
   right: 0;
 }
