--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1882,7 +1882,7 @@ a.mirador-icon-empty-slot [class^="icon-"] {
   padding-bottom:30px;
 }
 
-.mirador-viewer a.mirador-icon-window-menu, .mirador-viewer a.mirador-icon-toc, .mirador-viewer a.mirador-close-window, .mirador-viewer a.mirador-icon-ruler, .mirador-viewer a.mirador-icon-lock-window, .mirador-viewer a.mirador-icon-multi-image {
+.mirador-viewer a.mirador-icon-window-menu, .mirador-viewer a.mirador-icon-toc, .mirador-viewer a.mirador-close-window, .mirador-viewer a.mirador-icon-ruler, .mirador-viewer a.mirador-icon-lock-window, .mirador-viewer a.mirador-icon-multi-image, .mirador-viewer a.mirador-icon-duplicate-window {
   float:left;
   background: none;
   color: rgb( 146, 145, 145 );
@@ -1903,6 +1903,7 @@ a.mirador-icon-window-menu, a.mirador-icon-view-type, a.mirador-icon-ruler, a.mi
 .mirador-viewer a.mirador-osd-fullscreen:hover,
 .mirador-viewer a.mirador-icon-lock-window:hover,
 .mirador-viewer a.mirador-icon-multi-image:hover,
+.mirador-viewer a.mirador-icon-duplicate-window:hover,
 .mirador-viewer a.mirador-icon-ruler:hover {
   color: black;
 }
