--- a/css/mirador.css
+++ b/css/mirador.css
@@ -1874,7 +1874,7 @@ a.mirador-icon-empty-slot [class^="icon-"] {
   position:absolute;
 }
 
-.mirador-viewer a.mirador-icon-view-type, .mirador-viewer a.mirador-icon-metadata-view, .mirador-viewer a.mirador-osd-fullscreen  {
+.mirador-viewer a.mirador-icon-view-type, .mirador-viewer a.mirador-icon-metadata-view, .mirador-viewer a.mirador-osd-fullscreen {
   background: none;
   color: rgb( 146, 145, 145 );
   box-sizing: border-box;
@@ -1882,7 +1882,7 @@ a.mirador-icon-empty-slot [class^="icon-"] {
   padding-bottom:30px;
 }
 
-.mirador-viewer a.mirador-icon-window-menu, .mirador-viewer a.mirador-icon-toc, .mirador-viewer a.mirador-close-window, .mirador-viewer a.mirador-icon-ruler, .mirador-viewer a.mirador-icon-lock-window, .mirador-viewer a.mirador-icon-multi-image, .mirador-viewer a.mirador-icon-duplicate-window, .mirador-viewer a.mirador-icon-new-object {
+.mirador-viewer a.mirador-icon-window-menu, .mirador-viewer a.mirador-icon-toc, .mirador-viewer a.mirador-close-window, .mirador-viewer a.mirador-icon-ruler, .mirador-viewer a.mirador-icon-lock-window, .mirador-viewer a.mirador-icon-multi-image, .mirador-viewer a.mirador-icon-duplicate-window, .mirador-viewer a.mirador-icon-new-object, .mirador-viewer a.mirador-icon-zoom-lock {
   float:left;
   background: none;
   color: rgb( 146, 145, 145 );
@@ -1893,6 +1893,10 @@ a.mirador-icon-empty-slot [class^="icon-"] {
 
 a.mirador-icon-window-menu, a.mirador-icon-view-type, a.mirador-icon-ruler, a.mirador-icon-lock-window, a.mirador-icon-multi-image {
   width: 30px;
+}
+
+a.mirador-icon-zoom-lock {
+  width: 35px;
 }
 
 a.mirador-icon-ruler .ruler-icon {
@@ -1921,13 +1925,15 @@ a.mirador-icon-ruler .ruler-icon-grey {
 .mirador-viewer a.mirador-icon-multi-image:hover,
 .mirador-viewer a.mirador-icon-ruler:hover,
 .mirador-viewer a.mirador-icon-new-object:hover,
+.mirador-viewer a.mirador-icon-zoom-lock:hover,
 .mirador-viewer a.mirador-icon-duplicate-window:hover {
   color: black;
 }
 
 .mirador-viewer a.mirador-icon-view-type.selected,
 .mirador-viewer a.mirador-icon-toc.selected,
-.mirador-viewer a.mirador-icon-metadata-view.selected {
+.mirador-viewer a.mirador-icon-metadata-view.selected,
+.mirador-viewer a.mirador-icon-zoom-lock.selected {
   color: black;
 }
 
