--- a/css/less/main-menu.less
+++ b/css/less/main-menu.less
@@ -86,7 +86,8 @@
 
   .window-manifest-navigation {
     float: right;
-    width: 24%;
+    // setting width explicitly hides some of the plugin buttons when windows have small width
+    //width: 24%;
     text-align: right;
     padding-right: 10px;
     font-size: 16px;
