--- a/css/less/panels/metadata-view.less
+++ b/css/less/panels/metadata-view.less
@@ -27,7 +27,8 @@
   .mirador-viewer .metadata-label {
     color: @gray-66;
     font-style: italic;
-    text-transform: uppercase;
+    // UCLA
+    //text-transform: uppercase;
   }
 
   .mirador-viewer .metadata-value {
