--- a/css/less/views/image-view.less
+++ b/css/less/views/image-view.less
@@ -96,6 +96,21 @@
     display:block;
   }
 
+  .loading-indicator {
+    bottom: 0px;
+    left: 0px;
+    color: white;
+    z-index: 1048576;
+    text-align: center;
+  }
+
+  /*
+  .loading-indicator span {
+    display: block;
+	width: 100%;
+  }
+  */
+
   /* scale
   ----------------*/
   .mirador-image-scale.hidden {
